log
Thu Apr 30 08:01:29 PM UTC 2026: 
 tests:  1|8
total_score: 0/60
5c0032b
Thu Apr 30 08:08:46 PM UTC 2026: 
 treemap.c | 13 ++++++++++---
 1 file changed, 10 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘firstTreeMap’:
treemap.c:106:25: error: ‘tree’ is a pointer; did you mean to use ‘->’?
  106 |     TreeNode *aux = tree.root;
      |                         ^
      |                         ->
e84bff6
Thu Apr 30 08:09:02 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|7
total_score: 5/60
d1c9851
Thu Apr 30 08:13:01 PM UTC 2026: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:116:5: error: ‘key’ undeclared (first use in this function); did you mean ‘key_t’?
  116 |     key = tree->current->key;
      |     ^~~
      |     key_t
treemap.c:116:5: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:116:24: error: ‘TreeNode’ has no member named ‘key’
  116 |     key = tree->current->key;
      |                        ^~
treemap.c:117:5: error: ‘aux’ undeclared (first use in this function)
  117 |     aux = map->current->parent;
      |     ^~~
treemap.c:117:11: error: ‘map’ undeclared (first use in this function)
  117 |     aux = map->current->parent;
      |           ^~~
treemap.c:120:24: error: expected ‘;’ before ‘}’ token
  120 |             aux->parent
      |                        ^
      |                        ;
  121 |         }
      |         ~               
treemap.c:123:1: error: control reaches end of non-void function [-Werror=return-type]
  123 | }
      | ^
cc1: all warnings being treated as errors
3b0cf49
Thu Apr 30 08:13:44 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:116:5: error: ‘key’ undeclared (first use in this function); did you mean ‘key_t’?
  116 |     key = tree->current->key;
      |     ^~~
      |     key_t
treemap.c:116:5: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:116:24: error: ‘TreeNode’ has no member named ‘key’
  116 |     key = tree->current->key;
      |                        ^~
treemap.c:117:5: error: ‘aux’ undeclared (first use in this function)
  117 |     aux = map->current->parent;
      |     ^~~
treemap.c:117:11: error: ‘map’ undeclared (first use in this function)
  117 |     aux = map->current->parent;
      |           ^~~
treemap.c:123:1: error: control reaches end of non-void function [-Werror=return-type]
  123 | }
      | ^
cc1: all warnings being treated as errors
2e6e4a7
Thu Apr 30 08:14:25 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:116:5: error: ‘key’ undeclared (first use in this function); did you mean ‘key_t’?
  116 |     key = tree->current->key;
      |     ^~~
      |     key_t
treemap.c:116:5: note: each undeclared identifier is reported only once for each function it appears in
treemap.c:116:24: error: ‘TreeNode’ has no member named ‘key’
  116 |     key = tree->current->key;
      |                        ^~
treemap.c:117:5: error: ‘aux’ undeclared (first use in this function)
  117 |     aux = tree->current->parent;
      |     ^~~
treemap.c:123:1: error: control reaches end of non-void function [-Werror=return-type]
  123 | }
      | ^
cc1: all warnings being treated as errors
67953de
Thu Apr 30 08:16:38 PM UTC 2026: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
82e96b3
Thu Apr 30 08:19:08 PM UTC 2026: 
 treemap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:130:53: error: expected ‘;’ before ‘}’ token
  130 |                 tree->current = tree->current->right
      |                                                     ^
      |                                                     ;
  131 |             }
      |             ~                                        
treemap.c:132:22: error: statement with no effect [-Werror=unused-value]
  132 |         tree->current->pair;
      |         ~~~~~~~~~~~~~^~~~~~
treemap.c:134:1: error: control reaches end of non-void function [-Werror=return-type]
  134 | }
      | ^
cc1: all warnings being treated as errors
95858bd
Thu Apr 30 08:19:34 PM UTC 2026: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 8/60
d841912
Thu Apr 30 08:24:23 PM UTC 2026: 
 treemap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
529d195
Thu Apr 30 08:29:28 PM UTC 2026: 
 treemap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
bbbbb53
Thu Apr 30 08:33:13 PM UTC 2026: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|7
total_score: 8/60
7c59851
Thu Apr 30 08:46:46 PM UTC 2026: 
 treemap.c | 19 ++++++++++---------
 1 file changed, 10 insertions(+), 9 deletions(-)
 tests:  5|7
total_score: 8/60
94cb5fe
Thu Apr 30 08:47:12 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
23c0239
Thu Apr 30 08:47:54 PM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|6
total_score: 15/60
6838a38
Sat May  2 03:00:04 AM UTC 2026: 
 treemap.c | 14 +++++++++-----
 1 file changed, 9 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:75:8: error: ‘X’ undeclared (first use in this function)
   75 |     if(X->left == NULL) return NULL;
      |        ^
treemap.c:75:8: note: each undeclared identifier is reported only once for each function it appears in
6945d8a
Sat May  2 03:00:19 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘minimum’:
treemap.c:77:11: error: ‘X’ undeclared (first use in this function)
   77 |     while(X->left != NULL)
      |           ^
treemap.c:77:11: note: each undeclared identifier is reported only once for each function it appears in
12c6efb
Sat May  2 03:00:32 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|6
total_score: 15/60
5dc6dea
Sat May  2 03:01:31 AM UTC 2026: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  10|5
total_score: 15/60
d48511e
Sat May  2 03:12:57 AM UTC 2026: 
 treemap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:62:36: error: ‘TreeNode’ has no member named ‘key’
   62 |             if(key == tree->current->key) return tree->current->pair;
      |                                    ^~
treemap.c:63:40: error: ‘TreeNode’ has no member named ‘key’
   63 |             else if(key < tree->current->key) tree->current = tree->current->left;
      |                                        ^~
treemap.c:64:40: error: ‘TreeNode’ has no member named ‘key’
   64 |             else if(key > tree->current->key) tree->current = tree->current->right;
      |                                        ^~
5fd5696
Sat May  2 03:15:25 AM UTC 2026: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  10|5
total_score: 15/60
4597be0
Sat May  2 03:25:22 AM UTC 2026: 
 treemap.c | 17 +++++++++++------
 1 file changed, 11 insertions(+), 6 deletions(-)
 tests:  17|4
total_score: 25/60
aa46334
Sat May  2 03:26:56 AM UTC 2026: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  17|4
total_score: 25/60
83bdfbf
